--- a/src/main/resources/static/html/courseHome.html
+++ b/src/main/resources/static/html/courseHome.html
@@ -7,7 +7,7 @@
     <title>ShowYourSkillz</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/profilestyle.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.css">
+    <link rel="stylesheet" href="../css/angular-material.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
@@ -18,41 +18,49 @@
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-aria.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
+    <script src="../js/material-lib/angular-animate.min.js"></script>
+    <script src="../js/material-lib/angular-aria.min.js"></script>
+    <script src="../js/material-lib/angular-sanitize.js"></script>
+    <script src="../js/material-lib/angular-material.min.js"></script>
 </head>
 <body ng-app="SkillsApp" ng-controller="courseHomeCntrl">
-    <nav id="header-nav" class="navbar default navbar-light bg-faded">
-        <div class="container-fluid">
-            <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
-                <a class="navbar-brand" href="/html/home.html">ShowYourSkillz</a></li>
+    <nav class="navbar navbar-fixed-top z-depth-1" role="navigation">
+        <!--<nav id="header-nav" class="navbar default navbar-light bg-faded">-->
+            <!--<div class="container-fluid">-->
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand waves-effect waves-light" href="/html/home.html">ShowYourSkillz</a></li>
+                </div>
+                <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav btn-group">
+                        <li class="nav-item dropdown" id="menuLogin">
+                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{f_name}}</button>
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
+                                <span class="caret"></span>
+                                <span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu collapse" aria-labelledby="navbarDropdownMenuLink">
+                                <li>
+                                    <a href="profilePage.html">Profile</a>
+                                </li>
+                                <!--<li>
+                                    <a href="#" ng-click="openDialog()">Add Skill</a>
+                                </li>-->
+                                <li class="dropdown-divider">
+                                    <a href="#" ng-click="logout()">Logout</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="nav pull-right col-sm-4 col-xs-5 col-md-3">
-                <ul class="nav navbar-nav pull-right">
-                    <li class="btn-group" id="menuLogin">
-                        <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome,
-                            {{f_name}}
-                        </button>
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">
-                            <span class="caret"></span>
-                            <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <div class="dropdown-menu">
-                            <p>
-                                <a class="btn btn-outline-success" href="/profilePage.html">Profile</a>
-                            </p>
-                            <div class="dropdown-divider">
-                                <a href="#" type="submit" ng-click="logout()">Logout</a>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        </nav>
     <div class="wrapper">
         <div class="col-lg-2 col-sm-3 col-xs-3 col-md-2" id="sideList">
             <div class="grid1">
