--- a/src/main/resources/static/html/manageCourses.html
+++ b/src/main/resources/static/html/manageCourses.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/profilestyle.css">
     <link rel="stylesheet" href="../css/manageCourses.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css" media="screen" >
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.css">
+    <link rel="stylesheet" href="../css/angular-material.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../css/color/color-1.css" id="color">
     <link rel="stylesheet" href="../css/sweetalert2.min.css">
@@ -14,10 +14,10 @@
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-aria.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
+    <script src="../js/material-lib/angular-animate.min.js"></script>
+    <script src="../js/material-lib/angular-aria.min.js"></script>
+    <script src="../js/material-lib/angular-sanitize.js"></script>
+    <script src="../js/material-lib/angular-material.min.js"></script>
     <!--<script src="../js/script.js"></script>-->
 </head>
 <title>ShowyourSkillz</title>
